[package]
name = "bist"
version = "0.1.0"
authors = ["Yuiki <10101661+Yuiki@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = "0.1.22"
bytes = "0.4.12"
sha2 = "0.8.0"
rust-base58 = "0.0.4"
ripemd160 = "0.8.0"
arrayvec = "0.4.11"
hex = "0.3.2"
futures = "0.1.28"
byteorder = "1.3.2"
rand = "0.6"
dialoguer = "0.4.0"
murmur3 = "0.4.1"

[dependencies.secp256k1]
version = "0.14.0"
features = [ "rand" ]